--- a/functions/supplier/mail-supplier/pom.xml
+++ b/functions/supplier/mail-supplier/pom.xml
@@ -13,14 +13,19 @@
     <name>mail-supplier</name>
     <description>Mail Supplier</description>
 
+    <properties>
+        <jakarta-mail.version>2.1.0</jakarta-mail.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-mail</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>${jakarta-mail.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
