--- a/functions/supplier/twitter-supplier/pom.xml
+++ b/functions/supplier/twitter-supplier/pom.xml
@@ -24,8 +24,8 @@
             <artifactId>spring-integration-jms</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
