--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -159,8 +159,8 @@
                                     <!-- Disable Tracing and all Tracing exporters -->
                                     <management.tracing.enabled>false</management.tracing.enabled>
                                     <management.tracing.sampling.probability>1.0</management.tracing.sampling.probability>
-                                    <management.zipkin.tracing.enabled>false</management.zipkin.tracing.enabled>
-                                    <management.wavefront.tracing.enabled>false</management.wavefront.tracing.enabled>
+                                    <management.zipkin.tracing.export.enabled>false</management.zipkin.tracing.export.enabled>
+                                    <management.wavefront.tracing.export.enabled>false</management.wavefront.tracing.export.enabled>
                                 </properties>
                                 <metadata>
                                     <mavenPluginVersion>${spring-cloud-dataflow-apps-metadata-plugin.version}</mavenPluginVersion>
